Fixing Date Text: - added new class for todo item date text - added some css props for date text to align text toward the right

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@ code {
 .list-container::-webkit-scrollbar {
   display: none;
 }
+
+.todo-item-date-added {
+  justify-self: flex-end;
+  text-align: right;
+  padding-right: 1.75rem;
+}
